CherryPy, pandas y mas naturaleza pytoniana

--- a/Cherrypy/prueba6/segundo.html
+++ b/Cherrypy/prueba6/segundo.html
@@ -12,7 +12,7 @@
      </script>
 </head>
 <body>
-    segundo ${nombre}
-    <div id="texto" style="height: 70px; width:200px; background-color: gainsboro"></div>
+    Lo que he pasado con mako template es: ${nombre}
+
 </body>
 </html>
